--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <header>
       <div class="header"></div>
       <div class="slider">
-        <div class="slider--width" style="width: calc(100vw * 3)">
+        <div class="slider--controls">
+          <div class="slider--control" onclick="goPrev()">voltar</div>
+          <div class="slider--control" onclick="goNext()">proxima</div>
+        </div>
+        <div class="slider--width">
           <div
             class="slider--item"
-            style="background-image: url('./images/1.jpg')"
+            style="background-image: url('images/1.jpg')"
           ></div>
           <div
             class="slider--item"
-            style="background-image: url('./images/2.jpg')"
+            style="background-image: url('images/2.jpg')"
           ></div>
           <div
             class="slider--item"
-            style="background-image: url('./images/3.jpg')"
+            style="background-image: url('images/3.jpg')"
           ></div>
         </div>
       </div>
