Ajustando o conteudo e tamanho do slide

--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
           <div
             class="slider--item"
             style="background-image: url('images/1.jpg')"
-          ></div>
+          >
+            Viva o Surf
+          </div>
           <div
             class="slider--item"
             style="background-image: url('images/2.jpg')"
-          ></div>
+          >
+            Aproveite a Vida
+          </div>
           <div
             class="slider--item"
             style="background-image: url('images/3.jpg')"
-          ></div>
+          >
+            Pegue muitas Ondas
+          </div>
         </div>
       </div>
     </header>
